React-native base app with working enzyme test
Setup with
yarn add -D enzyme \
			enzyme-adapter-react-16 \
			@jonny/react-native-mock

yarn add -D detox

--- a/react-native/TDDExample/package.json
+++ b/react-native/TDDExample/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest __tests__/**/*.spec.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -16,17 +16,21 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "@jonny/react-native-mock": "^0.4.2",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
     "detox": "^17.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
+    "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "./__tests__/setup.js"
+    ]
   }
 }
